[package]
name = "nday"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dirs = "1.0"
console = "0.15.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.3"
clap = { version = "3.1.18", features = ["derive"] }
