[package]
name = "nday"
version = "0.2.3"
edition = "2018"
license = "MIT"
description = "A simple CLI tool for daily notes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dirs = "1.0"
console = "0.15.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.3"
clap = { version = "3.1.18", features = ["derive"] }
dialoguer = "0.10.1"
